# kickstart

./: .gitignore
2020a/: A-allocation.hs  B-plates.hs  C-workout.hs  D-bundling.hs  kickstart.cabal
2020b/: A-bike-tour.hs  B-bus-routes.hs  C-robot-path-decoding.hs  D-wandering-robot.hs  kickstart.cabal
2020c/: A-countdown.hs  B-stable-wall.hs  C-perfect-subarray.hs  D-candies.hs  kickstart.cabal
2020d/: A-record-breaker.hs  B-alien-piano.hs  C-beauty-of-trees.hs  D-locked-doors.hs  kickstart.cabal  stack.yaml
2020e/: A-longest-arithmetic.hs  B-high-buildings.hs  C-toys.hs  D-golden-stone.hs  kickstart.cabal
2020f/: A-atm-queue.hs  B-metal-harvest.hs  C-painters-duel.hs  D-yeetzhee.hs  kickstart.cabal
2020g/: A-kick_start.hs  B-maximum-coins.hs  C-combination-lock.hs  D-merge-cards.hs  kickstart.cabal
2020h/: A-retype.hs  B-boring-numbers.hs  C-rugby.hs  D-friends.hs  kickstart.cabal
2021a/: A-k-goodness-strings.hs  B-l-shaped-plots.hs  C-rabbit-house.hs  D-checksum.hs  kickstart.cabal
2021b/: A-increasing-substrings.hs  B-longest-progression.hs  C-consecutive-primes.hs  D-truck-delivery.hs  kickstart.cabal
2021c/: A-smaller-strings.hs  B-alien-generator.hs  C-rock-paper-scissors.hs  D-binary-operator.hs  kickstart.cabal
