name:                kickstart
version:             2020.2.0.0
synopsis:            Kickstart 2020 B
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          author
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-bike-tour
  main-is:             A-bike-tour.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable B-bus-routes
  main-is:             B-bus-routes.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable C-robot-path-decoding
  main-is:             C-robot-path-decoding.hs
  build-depends:       base, parsec
  default-language:    Haskell2010
  ghc-options: -Wall

executable D-wandering-robot
  main-is:             D-wandering-robot.hs
  build-depends:       base, vector
  default-language:    Haskell2010
  ghc-options: -Wall
