name:                kickstart
version:             2020.4.0.0
synopsis:            Kickstart 2020 D
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          author
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-record-breaker
  main-is:             A-record-breaker.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable B-alien-piano
  main-is:             B-alien-piano.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable C-beauty-of-trees
  main-is:             C-beauty-of-trees.hs
  build-depends:       base,array,containers
  default-language:    Haskell2010
  ghc-options: -Wall -Wno-missing-methods

executable D-locked-doors
  main-is:             D-locked-doors.hs
  build-depends:       base,array,mtl,vector
  default-language:    Haskell2010
  ghc-options: -Wall
