name:                kickstart
version:             2020.5.0.0
synopsis:            Kickstart 2020 E
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          author
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-longest-arithmetic
  main-is:             A-longest-arithmetic.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable B-high-buildings
  main-is:             B-high-buildings.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable C-toys
  main-is:             C-toys.hs
  build-depends:       base, containers
  default-language:    Haskell2010
  ghc-options: -Wall

executable D-golden-stone
  main-is:             D-golden-stone.hs
  build-depends:       base, array, containers, mtl
  default-language:    Haskell2010
  ghc-options: -Wall
