name:                kickstart
version:             2021.1.0.0
synopsis:            Kickstart 2021 A
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          author
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-k-goodness-strings
  main-is:             A-k-goodness-strings.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable B-l-shaped-plots
  main-is:             B-l-shaped-plots.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable C-rabbit-house
  main-is:             C-rabbit-house.hs
  build-depends:       base,array
  default-language:    Haskell2010
  ghc-options: -Wall

executable D-checksum
  main-is:             D-checksum.hs
  build-depends:       base,array,containers,vector
  default-language:    Haskell2010
  ghc-options: -Wall
