name:                kickstart
version:             2021.2.0.0
synopsis:            Kickstart 2021 B
license:             AllRightsReserved
author:              Jean-Baptiste Mazon
maintainer:          author
category:            Competition
build-type:          Simple
cabal-version:       >=1.10

executable A-increasing-substrings
  main-is:             A-increasing-substrings.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable B-longest-progression
  main-is:             B-longest-progression.hs
  build-depends:       base
  default-language:    Haskell2010
  ghc-options: -Wall

executable C-consecutive-primes
  main-is:             C-consecutive-primes.hs
  build-depends:       base,array
  default-language:    Haskell2010
  ghc-options: -Wall

executable D-truck-delivery
  main-is:             D-truck-delivery.hs
  build-depends:       array, base, containers, deepseq >= 1.4.4.0, mtl >= 2.2.2
  default-language:    Haskell2010
  ghc-options: -Wall
